# asciidoc-reader

./: Makefile  README.adoc  README.md  asciidoc_reader.py  pyproject.toml
src/asciidoc_reader/: __init__.py  reader.py
tests/: test_asciidoc_reader.py
