[tool.black]
line-length = 79

[tool.poetry]
name = "asciidoc-reader"
version = "0.1.0"
description = "Use asciidoc to write your pelican posts."
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "asciidoc_reader"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
pelican = "^4.8.0"
pytest = "^7.3.1"
isort = "^5.12.0"
bandit = "^1.7.5"
mypy = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "test"

